# VVVF-Simulator-Q

./: .gitignore  CMakeLists.txt  README.md
docs/: BaseFrequency_Compiled_Example.md  CustomPwm_Integration.md  Data_Serialization_Examples.md
src/: .clang-format  main.cpp
src/VvvfSimulator/: Exception.cpp  Exception.hpp  Logging.cpp  Logging.hpp  Notifications.cpp  Notifications.hpp  Outcome.hpp  YamlVvvfAnalyze.hpp
src/VvvfSimulator/Bits/: CxxConfig.h  DefConfig.h
src/VvvfSimulator/DSP/: BiquadFilter.hpp
src/VvvfSimulator/Data/: BaseFrequency.cpp  BaseFrequency.hpp  RflCppFormats.hpp  Serialization.hpp  Util.hpp  VehicleAudio.cpp  VehicleAudio.hpp  Vvvf.cpp  Vvvf.hpp
src/VvvfSimulator/Data/BaseFrequency/: Struct.cpp  Struct.hpp
src/VvvfSimulator/Data/TrainAudio/: Struct.cpp  Struct.hpp
src/VvvfSimulator/Data/Vvvf/: Struct.cpp  Struct.cpp.bak  Struct.hpp
src/VvvfSimulator/GUI/: MainWindow.qml  WindowPropertyBase.cpp  WindowPropertyBase.hpp
src/VvvfSimulator/GUI/Mascon/: LoadMidi.qml  LoadMidi.qml.cpp  LoadMidi.qml.cpp.old  LoadMidi.qml.hpp  LoadMidi.qml.hpp.old
src/VvvfSimulator/GUI/Util/: BitmapViewer.qml  BitmapViewer.qml.cpp  BitmapViewer.qml.hpp
src/VvvfSimulator/Generation/: GenerateBasic.cpp  GenerateBasic.hpp  GenerateCommon.cpp  GenerateCommon.hpp  IWriter.cpp  IWriter.hpp  LibAVLog.txt  QtVideoWriter.cpp  QtVideoWriter.hpp
src/VvvfSimulator/Generation/Audio/: AudioWriter.cpp  AudioWriter.hpp  AudioWriterProcess.cpp  AudioWriterProcess.hpp  AudioWriter_v1.9.1.1.cpp  BufferedWaveIODevice.cpp  (+3 more)
src/VvvfSimulator/Random/: xoshiro256.hpp
src/VvvfSimulator/Util/: Defines.h  SIMD.cpp  SIMD.hpp  String.cpp  String.hpp  Thread.hpp
src/VvvfSimulator/Vvvf/: Calculate.cpp  Calculate.hpp  CustomPwm.cpp  CustomPwm.cpp.v1.9.1.1  CustomPwm.hpp  CustomPwm.hpp.v1.9.1.1  InternalMath.cpp  InternalMath.hpp  InternalMathSimd.cpp  Model.hpp  Modulation.cpp  Modulation.hpp  Namespace_VVVF.h  Struct.cpp  Struct.hpp
src/VvvfSimulator/Yaml/: RflCppFormats.hpp
(+47 files in other folders)
